# bardow_c

./: .gitignore  CMakeLists.txt  main.c
include/: decimals.h  state.h  units.h  variable.h  variable_relationships.h
